Update of products list styles, squashed with fixes from comments

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,6 +1,13 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
   font-size: 16px;
+  background: rgb(250, 250, 250);
+}
+
+.products-header {
+  font-size: 30px;
+  font-weight: normal;
+  color: rgb(0, 46, 96);
 }
 
 .container {
@@ -48,3 +55,42 @@ body {
   background: -webkit-linear-gradient(left, #fff 0, #6ecbd4 15%, #6ecbd4 85%, #fff 100%);
   background: linear-gradient(to right, #fff 0, #6ecbd4 15%, #6ecbd4 85%, #fff 100%)
 }
+
+.pull-right {
+  float: right;
+}
+.pull-left {
+  float: left;
+}
+
+.product-grid {
+  padding: 0;
+  width: 420px;
+  margin: 10px auto;
+  list-style: none;
+}
+
+.product-grid .item {
+  float: left;
+  display: block;
+  width: 180px;
+  margin: 0 5px 20px;
+  border: 1px solid rgb(249, 249, 249);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+}
+
+.product-grid .item .product-image {
+  display: block;
+  width: 180px;
+  height: 160px;
+}
+
+.product-grid .item .bottom-row {
+  line-height: 40px;
+  padding: 0 10px;
+  font-size: 11px;
+  background: white;
+  color: rgb(89, 85, 77);
+  overflow: hidden;
+}
+
